# game-of-life-sfml

./: CMakeLists.txt  README.md
src/: main.cpp
